2016-04-20 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/z80/peeph-r2k.def
	* src/z80/peeph-tlcs90.def
	* src/z80/peeph-z80.def
	  Fix potential bugs.

2016-04-19 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/sdbinutils/bfd/doc/Makefile.am,
	  support/sdbinutils/bfd/doc/Makefile.in,
	  support/sdbinutils/binutils/Makefile.am,
	  support/sdbinutils/binutils/Makefile.in:
	  Fix a distclean bug. Now the "make distclean" command deletes
	  these unnecessary files:
	    support/sdbinutils/bfd/doc/bfd.info*
	    support/sdbinutils/binutils/arlex.c
	    support/sdbinutils/binutils/arparse.c
	    support/sdbinutils/binutils/arparse.h
	    support/sdbinutils/binutils/defparse.c
	    support/sdbinutils/binutils/defparse.h
	    support/sdbinutils/binutils/mcparse.c
	    support/sdbinutils/binutils/mcparse.h
	    support/sdbinutils/binutils/rcparse.c
	    support/sdbinutils/binutils/rcparse.h
	    support/sdbinutils/binutils/sysinfo.c
	    support/sdbinutils/binutils/sysinfo.h
	    support/sdbinutils/binutils/syslex.c

2016-04-18 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/include/setjmp.h: use C89 compatible comments
	* device/lib/ds390/setjmp.c: preliminary setjmp/longjmp implementation
	* device/lib/gbz80/Makefile.in,
	* device/lib/gbz80/setjmp.s,
	* device/lib/hc08/Makefile.in
	* device/lib/hc08/_setjmp.c
	* device/lib/s08/Makefile.in
	* device/lib/s08/_setjmp.c: implemented setjmp/longjmp for gbz80, hc08, s08
	* support/regression/tests/setjmp.c: enabled for all but ds390
	* device/lib/hc08/_divuint.c,
	* device/lib/s08/_divuint.c: removed mcs51 asm
	* device/lib/pic16/libc/stdlib/atof.c,
	* device/lib/pic16/libc/stdlib/x_ftoa.c: fixed since char is now unsigned
	* src/SDCCval.c (reorderIlist): properly fixed bug #2423
	* src/z80/peeph-gbz80.def: added rule 2
	* support/regression/tests/bug-2423.c: remove disabled pragma
	* support/regression/tests/float_single.c: enabled EXPF as it seems to pass

2016-04-18 Philipp Klaus Krause <pkk AT spth.de>
